# rules-template.sh

./: BUILD.bazel  MODULE.bazel  README.md  rules-template.sh
