load("@bazel_skylib//rules:write_file.bzl", "write_file")

write_file(
  name = "launcher",
  out = "launcher.sh",
  content = [
    "scrip_path=$(realpath ./rules-template.sh)",
    "cd $1",
    "$scrip_path $2 $3"
  ],
  is_executable = True,
)

sh_binary(
  name = "rules_template",
  srcs = [":launcher"],
  data = ["rules-template.sh"],
)

alias(
  name = "bin",
  actual = "rules_template",
)
